[package]
name = "fast-cli"
description = "fast.com, but from the terminal"
version = "0.1.4"
edition = "2021"
authors = ["Federico Dionisi <code@fdionisi.me>"]
readme = "../../README.md"
repository = "https://github.com/fdionisi/fast-cli/"
license = "MIT"

[[bin]]
name = "fast"
path = "src/main.rs"

[dependencies]
colored = "2"
fast-cli-core = { path = "../core", version = "0.1.4" }
futures = { workspace = true }
spinners-rs = "2.3.0"
tokio = { workspace = true , features = ["rt", "macros"] }
