[package]
name = "fast-cli-core"
description = "API implementation for running fast.com anywhere"
version = "0.1.2"
edition = "2021"
authors = ["Federico Dionisi <code@fdionisi.me>"]
repository = "https://github.com/fdionisi/fast-cli/"
license = "MIT"

[dependencies]
anyhow = "1.0.58"
futures = "0.3.21"
headless_chrome = { git="https://github.com/atroche/rust-headless-chrome", tag="v1.0.0" }

[dev-dependencies]
tokio = { version = "1.20.0", features = ["full"] }