[package]
name = "fast-cli-core"
description = "API implementation for running fast.com anywhere"
version = "0.1.5"
edition = "2021"
authors = ["Federico Dionisi <code@fdionisi.me>"]
repository = "https://github.com/fdionisi/fast-cli/"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
futures = { workspace = true }
headless_chrome = { version = "1.0.1" }

[dev-dependencies]
tokio = { workspace = true , features = ["full"] }